--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="style.css">
     <div class="container">
         <div style="text-align: center;">
-  <img src="./image/nukem-min.png" width="90" height="30" alt="Description de l'image">
+            <div class="rose">
+  <img src="./image/nukem-min.png" width="120" height="50"  alt="Description de l'image">
+</div>
     </div>
 
          <nav>
@@ -30,14 +32,14 @@
 <body>
     <div style="text-align:center;">
     
-      <img src="./image/CAP2-min.png" width="1334" height="520" alt="image">
+      <img src="./image/CAP2-min.png" width="1350" height="520" alt="image">
     
     </div>
 <div class="container">
     <div class="noire">
         <div class="text">
   
-            <div style="text-align: center;"><br><br><br><br><br><br><br><br>
+            <div style="text-align: center;"><br><br><br><br><br><br>
              <h1>UPDATES AND NEW STUFF</h1>
              <h3>Sign up here for my newletter where I let folks know what I'm cooking up <3 </h3></b><br>
                 <div class="formulaire">
